--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,22 +15,45 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  # This workflow contains a single job called "test"
+  test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php: [ 8.0, 7.4, 7.3, 7.2 ]
+
+    services:
+        mysql:
+            image: mysql:5.7
+            env:
+                MYSQL_ALLOW_EMPTY_PASSWORD: yes
+                MYSQL_DATABASE: wordpress_test
+            ports:
+                - 3306
+            options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      # @link https://github.com/spatie/laravel-activitylog/blob/master/.github/workflows/run-tests.yml
+      - name: Setup PHP
+          uses: shivammathur/setup-php@v2
+          with:
+              php-version: ${{ matrix.php }}
+              extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, mysql, mysqli, pdo_mysql, bcmath, soap, intl, gd, exif, iconv, imagick, fileinfo
+              coverage: none
+      
+      -   name: Install dependencies
+          run: |
+              composer install --prefer-dist --no-interaction --no-suggest
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Setup tests
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+            bash bin/install-wp-tests.sh wordpress_test root '' localhost latest
+
+      -   name: Execute tests
+          run: vendor/bin/phpunit
