--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,9 @@ jobs:
           run: |
               composer install --prefer-dist --no-interaction --no-suggest
 
+      - name: Start MySQL
+        run: sudo /etc/init.d/mysql start
+
       - name: Setup tests
         run: |
             bash bin/install-wp-tests.sh wordpress_test root '' 127.0.0.1 latest
