--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Setup tests
         run: |
-            bash bin/install-wp-tests.sh wordpress_test root '' localhost latest
+            bash bin/install-wp-tests.sh wordpress_test root root localhost latest
 
       -   name: Execute tests
           run: vendor/bin/phpunit
