--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,6 @@ jobs:
             bash bin/install-wp-tests.sh wordpress_test root root localhost latest
 
       -   name: Execute tests
-          run: vendor/bin/phpunit --bootstrap=tests/bootstrap.php tests/
+          run: phpunit
           env:
             DB_PORT: ${{ job.services.mysql.ports[3306] }}
