--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,9 @@ jobs:
         run: |
             bash bin/install-wp-tests.sh wordpress_test root root localhost latest
 
+      - name: Working Directory
+        run: pwd
+
       -   name: Execute tests
           run: vendor/bin/phpunit --bootstrap=tests/bootstrap.php tests/
           env:
