--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,6 @@ jobs:
         run: pwd
 
       -   name: Execute tests
-          run: vendor/bin/phpunit --bootstrap=tests/bootstrap.php tests/
+          run: vendor/bin/phpunit
           env:
             DB_PORT: ${{ job.services.mysql.ports[3306] }}
